[gd_scene load_steps=17 format=2]

[ext_resource path="res://Personagens/Jose/Jose.tscn" type="PackedScene" id=1]
[ext_resource path="res://Public/WhatsApp Image 2022-08-24 at 20.44.49.jpeg" type="Texture" id=2]
[ext_resource path="res://Cenas/Utilitarios/popupDialogo.tscn" type="PackedScene" id=3]
[ext_resource path="res://Public/bonecoTeste.png" type="Texture" id=4]
[ext_resource path="res://Cenas/Utilitarios/PopupPause.tscn" type="PackedScene" id=5]
[ext_resource path="res://Cenas/Fases/Tutorial/Mapa3/Combate.gd" type="Script" id=6]
[ext_resource path="res://Public/dellson1.png" type="Texture" id=7]
[ext_resource path="res://Cenas/Utilitarios/Hint/Hint.tscn" type="PackedScene" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 22.3607

[sub_resource type="CircleShape2D" id=2]
radius = 20.9308

[sub_resource type="CapsuleShape2D" id=3]
radius = 45.0

[sub_resource type="CapsuleShape2D" id=4]
radius = 31.0

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 69.5, 27 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 70, 80 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 105, 17.5 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 92.5, 10 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 6 )

[node name="WhatsAppImage2022-08-24At204449" type="Sprite" parent="."]
position = Vector2( 642.5, 359.5 )
scale = Vector2( 2.71875, 2.28437 )
texture = ExtResource( 2 )

[node name="Dellson1" type="Sprite" parent="."]
position = Vector2( 689, 195 )
scale = Vector2( 0.662963, 0.721053 )
texture = ExtResource( 7 )
flip_h = true

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( -5, 421 )
scale = Vector2( 1.1, 1.05 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( -4, 0, 470.909, -3.05176e-05, 471.818, 168.571, 442.727, 167.619, 445.455, 153.333, 261.818, 154.286, 263.636, 173.333, 204.545, 173.333, 204.545, 158.095, 27.2727, 159.048, 28.1818, 180, 0, 180.952 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( 1, 0, -0.909091, 288.571, 1181.82, 291.429, 1174, -302, 1136, -302, 1137, -204, 1023, -203, 1023, -324, 894.545, -322.857, 894.545, -205.714, 787, -205, 758, -208, 703, -210, 697, -203, 675, -204, 666, -217, 588, -218, 580, -205, 555, -204, 546, -223, 544, -205, 474, -205, 471, -218, 307, -218, 307, -207, 261, -208, 257, -271, 244, -270, 244, -285, 244, -298, -1, -298, -2, 56, -98, 54, -92, -446, 1229, -446, 1229, -192.515, 1229, 324, -27, 325 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 15, -89 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 10, -217.143 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Jose" parent="." instance=ExtResource( 1 )]
position = Vector2( 43, 611 )
scale = Vector2( 4, 4 )

[node name="Camera2D" type="Camera2D" parent="Jose"]
position = Vector2( 90.447, -53.4945 )
rotating = true
limit_left = 4
limit_top = 0
limit_right = 1100
limit_bottom = 700
drag_margin_h_enabled = true
drag_margin_v_enabled = true
drag_margin_left = 0.4
drag_margin_right = 0.28
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="CanvasLayer" type="CanvasLayer" parent="Jose/Camera2D"]

[node name="PopupPause" parent="Jose/Camera2D/CanvasLayer" instance=ExtResource( 5 )]

[node name="PopupDialog" parent="Jose/Camera2D/CanvasLayer" instance=ExtResource( 3 )]

[node name="Hint" parent="Jose/Camera2D/CanvasLayer" instance=ExtResource( 8 )]

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]

[node name="Hurtbox" type="Area2D" parent="KinematicBody2D"]
collision_layer = 32768
collision_mask = 32768

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/Hurtbox"]
position = Vector2( 202, 321 )
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="KinematicBody2D"]
position = Vector2( 195, 317 )
scale = Vector2( 0.284848, 0.22439 )
texture = ExtResource( 4 )
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 200, 322 )
shape = SubResource( 4 )

[node name="Label" type="Label" parent="KinematicBody2D"]
margin_left = 151.0
margin_top = 240.0
margin_right = 235.0
margin_bottom = 278.0
rect_scale = Vector2( 1.3, 1.3 )
align = 1
valign = 1
uppercase = true

[node name="Area2D" type="Area2D" parent="."]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1053, 124 )
shape = SubResource( 5 )

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 70, 622 )
shape = SubResource( 6 )

[node name="Area2D3" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D3"]
position = Vector2( 1059, 218 )
shape = SubResource( 7 )

[node name="Area2D4" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D4"]
position = Vector2( 1054, 180 )
shape = SubResource( 8 )

[connection signal="area_entered" from="KinematicBody2D/Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="area_entered" from="KinematicBody2D/Hurtbox" to="Jose/Camera2D/CanvasLayer/PopupDialog" method="_on_Hurtbox_area_entered"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_entered" from="Area2D2" to="Jose/Camera2D/CanvasLayer/PopupDialog" method="_on_Area2D2_area_entered"]
[connection signal="area_shape_exited" from="Area2D2" to="." method="_on_Area2D2_area_shape_exited"]
[connection signal="area_entered" from="Area2D3" to="." method="_on_Area2D3_area_entered"]
[connection signal="area_entered" from="Area2D3" to="Jose/Camera2D/CanvasLayer/PopupDialog" method="_on_Area2D3_area_entered"]
[connection signal="area_entered" from="Area2D4" to="." method="_on_Area2D4_area_entered"]
[connection signal="area_entered" from="Area2D4" to="Jose/Camera2D/CanvasLayer/PopupDialog" method="_on_Area2D4_area_entered"]
